# streaming-cookbook

./: .env.example  .gitignore  README.md
python/: README.md
python/multimodal/: README.md  pyproject.toml
python/multimodal/src/: agent.py
python/react-custom-backend/: README.md  pyproject.toml
python/react-custom-backend/frontend/: index.html  package-lock.json  package.json  vite.config.ts
python/react-custom-backend/frontend/src/: App.tsx  main.tsx  styles.css  threads.ts
python/react-custom-backend/frontend/src/app/: index.tsx  threads.ts
python/react-custom-backend/frontend/src/app/components/: Chat.tsx  MessageList.tsx  MetaCard.tsx  StreamingIndicator.tsx  ThemeIcons.tsx
python/react-custom-backend/src/: agent.py  main.py  tools.py
python/react-custom-backend/src/app/: server.py  session.py  threads.py
typescript/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
typescript/a2ui/: package.json
typescript/multimodal/: package.json
typescript/multimodal/src/: agent.ts
typescript/openui/: .gitignore  README.md  index.html  langgraph.json  package.json  tsconfig.app.json  vite.config.ts
typescript/openui/scripts/: check-app.mts  smoke.mts  test-data-sources.mts
typescript/openui/src/: App.tsx  agent.ts  library.ts  main.tsx  styles.css  tools.ts
typescript/openui/src/data-sources/: calendar.ts  github.ts  index.ts  posthog.ts  runtime.ts  stripe.ts
typescript/react-custom-backend/: README.md  index.html  package.json  vite.config.ts
typescript/react-custom-backend/src/: app.ts  styles.css
typescript/react-custom-backend/src/agent/: index.ts  tools.ts
typescript/react-custom-backend/src/app/: index.tsx  threads.ts
typescript/react-custom-backend/src/app/components/: Chat.tsx  MessageList.tsx  MetaCard.tsx  StreamingIndicator.tsx
typescript/react-custom-backend/src/server/: serialize.ts  server.ts  session.ts  threads.ts
typescript/react-custom-transport/: package.json
typescript/streaming/: package.json
typescript/streaming/src/human-in-the-loop/: remote.ts
typescript/streaming/src/subagents/: remote.ts
typescript/ui-angular/: package.json
typescript/ui-react/: package.json
typescript/ui-svelte/: package.json
typescript/ui-vue/: package.json
