[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multimodal-example"
version = "0.0.0"
description = "Python backend for the multimodal Bedtime Story cookbook example. Serves the same graph wire-shape as typescript/multimodal/ so the existing Vite/React frontend can talk to a Python `langgraph dev` server."
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.0,<2.0.0",
    "openai>=1.40.0",
    "pydantic>=2.0",
    # `langgraph dev` server used to serve the in-process graph declared in
    # `langgraph.json` so the JS frontend can stream against it on port 2024.
    "langgraph-api==0.9.0rc1",
    # langgraph-api 0.9.0rc1 declares langgraph-runtime-inmem<0.29 but calls
    # a Stream.join_event_streaming method only present from the 0.29 dev
    # line. Pin the matching pre-release explicitly.
    "langgraph-runtime-inmem==0.29.0.dev1",
    # Provides `langgraph dev`.
    "langgraph-cli>=0.4.0",
]

[tool.uv]
prerelease = "allow"
override-dependencies = [
    "langgraph-runtime-inmem==0.29.0.dev1",
]

[tool.uv.sources]
langchain = { git = "https://github.com/langchain-ai/langchain.git", branch = "master", subdirectory = "libs/langchain_v1" }
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", branch = "master", subdirectory = "libs/core" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
